feat(about): load at startup service from file into db and give about.json as templated
