# server/docs/swagger.json
@@ -20,7 +20,12 @@
     "paths": {
         "/about.json": {
             "get": {
-                "description": "about",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get information about the server",
                 "consumes": [
                     "application/json"
                 ],
@@ -30,12 +35,13 @@
                 "tags": [
                     "about"
                 ],
-                "summary": "About",
+                "summary": "Get information about the server",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "msg"
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     }
                 }
@@ -234,6 +240,11 @@
         },
         "/workflow/create": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Create a new workflow",
                 "consumes": [
                     "application/json"
@@ -252,7 +263,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Workflow"
+                            "$ref": "#/definitions/models.WorkflowDTO"
                         }
                     }
                 ],
@@ -260,7 +271,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Workflow"
+                            "$ref": "#/definitions/models.WorkflowDTO"
                         }
                     },
                     "400": {
@@ -277,6 +288,11 @@
         },
         "/workflow/delete/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Delete a workflow by ID",
                 "consumes": [
                     "application/json"
@@ -339,6 +355,11 @@
         },
         "/workflow/list": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "List all workflows",
                 "consumes": [
                     "application/json"
@@ -356,7 +377,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Workflow"
+                                "$ref": "#/definitions/models.WorkflowDTO"
                             }
                         }
                     }
@@ -365,6 +386,40 @@
         }
     },
     "definitions": {
+        "models.EventDTO": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "parameters": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ParametersDTO"
+                    }
+                },
+                "service_id": {
+                    "type": "integer"
+                },
+                "type": {
+                    "$ref": "#/definitions/models.EventType"
+                }
+            }
+        },
+        "models.EventType": {
+            "type": "string",
+            "enum": [
+                "action",
+                "reaction"
+            ],
+            "x-enum-varnames": [
+                "ActionEventType",
+                "ReactionEventType"
+            ]
+        },
         "models.LoginRequest": {
             "type": "object",
             "required": [
@@ -376,6 +431,23 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ParametersDTO": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "event_id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
@@ -399,8 +471,51 @@
                 }
             }
         },
-        "models.Workflow": {
-            "type": "object"
+        "models.WorkflowDTO": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "events": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.EventDTO"
+                    }
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/models.WorkflowStatus"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.WorkflowStatus": {
+            "type": "string",
+            "enum": [
+                "pending",
+                "processed",
+                "failed"
+            ],
+            "x-enum-varnames": [
+                "WorkflowStatusPending",
+                "WorkflowStatusProcessed",
+                "WorkflowStatusFailed"
+            ]
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
